--- a/Vista/InicioVista/InicioVista.html
+++ b/Vista/InicioVista/InicioVista.html
@@ -6,7 +6,8 @@
     <title>Control de Mobiliario - Gobierno de Oaxaca</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="vista/styles.css">
+    <link rel="stylesheet" href="/PruebaMobiliarioGobierno/vista/styles.css">
+
 
 
 </head>
